--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>PersonalProject</title>
-    <base href="/">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <base href="/"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <link href="dist/styles.d63d9d8c485e7a60eeb9.bundle.css" rel="stylesheet"/>
 </head>
 <body>
